--- a/my-website/index.html
+++ b/my-website/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>WatchFlix</title>
-  <link rel="icon" type="image/png" href="watchflixfav.png">
+  <link rel="icon" type="image/png" href="watchflix.png">
   <link rel="stylesheet" href="css/home.css">
   <link rel="preload" href="css/home.css" as="style">
   <link rel="preload" href="js/home.js" as="script">
